--- a/Cube Remaking.html
+++ b/Cube Remaking.html
@@ -10,7 +10,7 @@
 			box-sizing: border-box;
 		}
 		body{
-			background-image: linear-gradient(to right, pink, blue);
+			background-image: linear-gradient(to right, pink, yellow);
 
 		}
 		#div1{
