--- a/Timetable.html
+++ b/Timetable.html
@@ -1,8 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="Project 2 styling.css">
+	<!-- <link rel="stylesheet" type="text/css" href="Project 2 styling.css"> -->
 	<title>Time Table</title>
+    <style>
+        table, tr, td{
+    border:2px solid blue;
+    width: 1200px;
+    text-align: center;
+    padding: 4px;
+}
+h2{
+    color: green;
+    text-align: center;
+}
+body{
+    background-color: lightblue;
+}
+.ABM{
+    color: red;
+}
+.two{
+    color:pink;
+}
+.free{
+    color: white;
+}
+    </style>
 </head>
 <body>
 	<h2>TIME TABLE</h2>
